more updates on library and admin